# haskell-starter

./: CHANGELOG.md  Makefile  README.md  haskell-starter.cabal
src/: Lib.hs
test/: LibSpec.hs
